# hello_bevy4

./: Cargo.toml  wifi_rand_mac.conf
assets/levels/: level0.ldtk
assets/sprites/: decorations.aseprite  farm.aseprite  haha.aseprite  healthbar.aseprite  hehe.aseprite  tileset.aseprite
src/: item_list.rs  main.rs  untitled.tiled-session
src/assets/morning_adventures_tilemap/: License.txt  Morning Adventures.tsx
src/camera/: systems.rs
src/enemies/: components.rs  systems.rs
src/farming/: components.rs  systems.rs
src/graphics/: components.rs  systems.rs
src/health_damage/: mod.rs  systems.rs
src/input/: mod.rs  systems.rs
src/interactables/: components.rs  systems.rs
src/items/: components.rs  systems.rs
src/level/: components.rs  systems.rs
src/movement/: components.rs  systems.rs
src/npcs/: components.rs  systems.rs
src/player/: components.rs  systems.rs
