[package]
name = "hello_bevy4"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.2"
bevy = { version = "0.14.0", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.25.1"
bevy_ecs_ldtk = "0.10.0"
bevy_light_2d = "0.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
