[package]
name = "hello_bevy4"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.2"
bevy = { version = "0.14.2", features = ["dynamic_linking", "file_watcher"]}
bevy-inspector-egui = "0.26.0"
bevy_ecs_ldtk = "0.10.0"
bevy_editor_pls = "0.9.0"
bevy_light_2d = "0.4.0"
bevy_reflect = "0.14.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
